# Atlas

./: .gitignore  .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.opencode/: opencode.json
docs/: AI_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE.md  DESIGN_SYSTEM.md  PROJECT_STATE.md  ROADMAP.md  VISION.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: connection.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/repositories/: mod.rs
src-tauri/tests/: e2e_memory.rs
src/core/memory/: entry-service.ts  entry.ts  index.ts
src/core/memory/entities/: index.ts  service.ts  types.ts
src/core/memory/extraction/: index.ts  pipeline.ts
src/core/memory/normalization/: index.ts
src/core/memory/pipeline/: engine.ts  index.ts
src/features/ai/: index.ts  provider-manager.ts
src/features/ai/components/: AISettings.tsx
src/features/assistant/: index.ts
src/features/editor/: index.ts
src/features/entities/: index.ts
src/features/graph/: index.ts
src/features/insights/: index.ts
src/features/search/: index.ts
src/shared/config/: index.ts
src/shared/layout/: AppShell.tsx  MainContent.tsx  Sidebar.tsx  SidebarItem.tsx  TopBar.tsx  index.ts
src/shared/store/: app-store.ts
src/shared/theme/: globals.css  tokens.ts
src/shared/types/: index.ts
src/shared/ui/: Icon.tsx  Logo.tsx  index.ts
(+59 files in other folders)
