[package]
name = "atlas"
version = "0.1.0"
description = "Atlas - Write naturally. Atlas remembers everything else."
authors = ["Atlas Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "atlas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
